2012-02-16  Leo Liu  <sdl.web@gmail.com>

	* gnus-start.el (gnus-1): Avoid duplicate entries.

2012-02-15  Lars Ingebrigtsen  <larsi@gnus.org>

	* shr.el (shr-remove-trailing-whitespace): Really delete the padding on
	too-wide lines.

2012-02-15  Paul Eggert  <eggert@cs.ucla.edu>

	* shr.el (shr-rescale-image): Undo previous change; see
	<http://lists.gnu.org/archive/html/emacs-devel/2012-02/msg00540.html>.

2012-02-13  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-record-commands): New variable.
	(nnimap-log-command): Use it.
	(nnimap-make-process-buffer): Add a space to the process buffer.
	(nnimap-transform-headers): Don't bug out on header lines containing
	stuff that look like IMAP length encodings.

	* shr.el (shr-rescale-image): Allow viewing large images.

2012-02-12  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnml.el (nnml-request-compact-group): Delete the marks file after
	compaction (bug#10800).

	* gnus-art.el (gnus-stop-downloads): Stop `url-queue' downloads on
	group exit.

	* nnimap.el (nnimap-parse-flags): Parse correctly when we have mixed
	QRESYNC/FETCH output.

2012-02-11  Glenn Morris  <rgm@gnu.org>

	* sieve-manage.el (sieve-manage-default-stream):
	* shr.el (shr):
	* nnir.el (nnir-ignored-newsgroups, nnir-summary-line-format)
	(nnir-retrieve-headers-override-function)
	(nnir-imap-default-search-key, nnir-notmuch-program)
	(nnir-notmuch-additional-switches, nnir-notmuch-remove-prefix)
	(nnir-method-default-engines):
	* message.el (message-cite-reply-position):
	* gssapi.el (gssapi-program):
	* gravatar.el (gravatar):
	* gnus-sum.el (gnus-refer-thread-use-nnir):
	* gnus-registry.el (gnus-registry-unfollowed-addresses)
	(gnus-registry-max-pruned-entries):
	* gnus-picon.el (gnus-picon-inhibit-top-level-domains):
	* gnus-int.el (gnus-after-set-mark-hook)
	(gnus-before-update-mark-hook):
	* gnus-async.el (gnus-async-post-fetch-function):
	* auth-source.el (auth-source-cache-expiry):